Cleaned up initial code, added images
Pre-processing almost complete.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 ## File-based project format:
 *.iws
 
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
